# s3-browser-crossplat

./: .gitignore  CHANGELOG.md  README.md  delete-all.py  index.html  put-testdata.py  s3-browser-launcher.sh  s3_browser.py
.github/workflows/: pages.yml  publish-current-release.yml  release-matrix.yml
apps/flutter_app/: .metadata  README.md  pubspec.yaml
apps/flutter_app/android/: build.gradle.kts  gradle.properties
apps/flutter_app/android/app/: build.gradle.kts
apps/flutter_app/lib/: main.dart
apps/flutter_app/lib/app/: s3_browser_app.dart  version_details.dart
apps/flutter_app/linux/: CMakeLists.txt
apps/flutter_app/test/: android_engine_service_test.dart  app_controller_test.dart  app_state_repository_test.dart  widget_test.dart
apps/flutter_app/windows/: CMakeLists.txt
contracts/: engine_contract.json  transport_contract.md
docs/: FEATURE_MATRIX.md  IMPLEMENTATION_GUIDE.md
engines/go/: go.mod
engines/go/src/: main.go
engines/java/: build.gradle.kts  settings.gradle.kts
engines/python/src/: main.py
engines/rust/: Cargo.toml
engines/rust/src/: main.rs
packaging/android/: README.md
packaging/linux/: AppImageBuilder.yml  nfpm.yaml.tmpl
packaging/macos/: README.md
packaging/windows/: Product.template.wxs  Product.wix3.template.wxs  installer.iss
scripts/: bootstrap.ps1  bootstrap.sh  build.ps1  build.sh  export-source.ps1  package-linux.sh  package-macos.sh  package-windows.ps1  stage-engines.ps1  stage-engines.sh
tests/contract/: README.md
tests/fixtures/: health_response.json  list_objects_response.json
(+29 files in other folders)
