[package]
name = "s3-browser-rust-engine"
version = "2.0.7"
edition = "2021"

[dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-credential-types = "1"
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "rustls"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
